# TME

./: .clang-tidy  .gitignore  App.hpp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TuringMachine.cpp  TuringMachine.hpp  example.txt  main.cpp  text_functions.cpp
assets/: icon.xcf  tme.rc  tme.res
assets/LaTeX/: instruction.tex
assets/LaTeX/pic/: 0.xcf
examples/: BasicTest.txt  HelloWorld.txt  ZhegalkinOfDualFunc.txt  comments.txt  composition.txt  macros.txt
lib/: logging.h  svwm.h  tm_pic.h
parser/: lexer.c
src/: App.cpp  App.hpp  CMakeLists.txt  TuringMachine.cpp  TuringMachine.hpp  build.sh  example.txt  example1.tme  main.cpp  text_functions.cpp  text_functions.hpp
src/analyser/: CMakeLists.txt  command.cpp  command.hpp  parser.cpp  parser.hpp
src/cli/: App.cpp  App.hpp  main.cpp
src/cli/libs/: CMakeLists.txt  text_functions.cpp  text_functions.hpp  tm_pic.h
src/emulator/: App.cpp  App.hpp  CMakeLists.txt  MachineState.hpp  TuringMachine.cpp  TuringMachine.hpp  main.cpp
src/emulator/libs/: text_functions.cpp
src/emulator/parser/: command.cpp  command.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/gui/: BlackSeaSunriseLight.qss  CMakeLists.txt  MoonlightDark.qss  byte_images.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  themes.h
src/gui/triggers/: title_bar.cpp
src/lib/: CMakeLists.txt  logging.c  svwm.c
src/libs/: text_functions.cpp
src/machine/: CMakeLists.txt  MachineState.hpp  TuringMachine.cpp  TuringMachine.hpp
src/parser/: CMakeLists.txt  lexer.c  lexer.cpp  lexer.h  lexer.hpp
src/tme/: App.cpp
src/tme/libs/: text_functions.cpp
src/tme/parser/: lexer.cpp
src/tools/: ProjectName.hpp
src/translator/: CMakeLists.txt  Command.hpp  Parser.cpp  Parser.hpp  Translator.cpp  Translator.hpp  command.cpp  command.hpp  parser.cpp  parser.hpp  translator.cpp  translator.hpp
src/ui/: CMakeLists.txt  MaterialDark.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: AllTests.cpp  CMakeLists.txt  HelloWorld.txt  ZhegalkinOfDualFunc.txt  example.txt  example1.tme  onishenko.txt
tests/analyser/: AnalyserTests.cpp  BasicFailTest.txt  SectionTextTest.txt
tests/machine/: BasicTest.db  MachineTests.cpp
tests/translator/: AnalyserTests.cpp  BasicFailTest.txt  BasicTest.txt  EndTest.txt  SectionDataTest.txt  StartTest.txt
